--- a/src/page3.html
+++ b/src/page3.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Página segunda</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <title>Tercera</title>
 </head>
 <body>
-    <h1>Página segunda</h1>
+    <h1>Página Tercera</h1>
 </body>
 </html>
